# rss2jext

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: .requirements.txt  code-quality.yml  docker-build.yml  docker-publish.yml  docker.yml  lint-python.yml
data/: servers.json
data/templates/resourcepack/assets/minecraft/models/item/: music_disc_11.json  music_disc_latestpodepisode.json
res/: servers.json
res/templates/templates/resourcepack/assets/minecraft/models/item/: music_disc_11.json
src/: rss2jext.py
src/data/templates/: discs.json
src/data/templates/resourcepack/: pack.mcmeta
src/data/templates/resourcepack/assets/minecraft/: sounds.json
src/data/templates/resourcepack/assets/minecraft/models/item/: music_disc_latestpodepisode.json
src/jext/: resource_pack.py
src/minecraft/: __init__.py  jext.py  resource_pack.py
src/pterodactyl/: __init__.py  api.py
src/rss_helper/: __init__.py  rss_helper.py
